--- a/ocmoni6_1/html/index.html
+++ b/ocmoni6_1/html/index.html
@@ -243,6 +243,7 @@
                 <select v-model ="pageBar.pageSize" style="width: 50px"> 
                     <option value="5">5条</option>
                     <option value="10">10条</option>
+                    <option value="10">15条</option>
                     <option value="20">20条</option>
                     <option value="30">30条</option>
                     <option value="50">50条</option>
