--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -14,6 +14,7 @@
             display: none;
         }
         .hasMoreQuerySection{
+            /*transition:  padding-top 2s;*/
             padding-top: 166px;
         }
     </style>
