--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -60,28 +60,28 @@
         <!--query row1 start-->
         <div class="query_row">
             <span class="query_title">基础信息</span>
-            <input id ="c1" type="checkbox"><label for="c1">未发布</label>
-            <input id ="c2" type="checkbox"><label for="c2">已发布</label>
-            <input  id ="c3" type="checkbox"><label for="c3"> 未生效</label>
-            <input  id ="c4" type="checkbox"> <label for="c4">已生效</label>
-            <input  id ="c5" type="checkbox"> <label for="c5">已过期</label>
-
+            <input id ="releaseStatus01" name ="status" type="checkbox"><label for="releaseStatus01">未发布</label>
+            <input id ="releaseStatus02" name ="status" type="checkbox"><label for="releaseStatus02">已发布</label>
+            <input  id ="effectStatus01" name="effStatus" type="checkbox"><label for="effectStatus01"> 未生效</label>
+            <input  id ="effectStatus02" name="effStatus" type="checkbox"> <label for="effectStatus02">已生效</label>
+            <input  id ="effectStatus03" name="effStatus" type="checkbox"> <label for="effectStatus03">已过期</label>
             <label  class="marginR5">服务</label>
-            <select class="common_input" style="width: 120px">
-                <option>商务名称</option>
-                <option>子代码</option>
+            <select class="common_input" id="server" style="width: 120px">
+                <option value="001">商务名称</option>
+                <option value="002">子代码</option>
             </select>
-            <input type="email" class="common_input" style="width: 100px">
+            <input type="text" id="service" name="service" mode="upper" class="common_input" style="width: 100px" />
             <label class="marginR5">销售日期</label>
-            <input type="text" class="common_input datepicker"  placeholder="起始日期" style="width: 100px">
-            <span class="glyphicon glyphicon-th iconfont_box"></span>
-            <span class="marginL15"></span>
-            <input type="text" class="common_input datepicker"  placeholder="结束日期" style="width: 100px">
-            <span class="glyphicon glyphicon-th iconfont_box"></span>
-                <span class="marginLR15">
-                </span>
-            <input  id ="showHideMoreQuerySectionBtn" type="checkbox" v-model ="showMoreQuerySectionFlag"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
-            <button type="button" class="btn btn-sm btn-primary" v-on:click="queryS7">查询</button>
+            <input type="text" id="effectMinDate" name="effectMinDate" class="common_input datepicker"  placeholder="起始日期" style="width: 100px" />
+            <label for="effectMinDate" class="glyphicon glyphicon-calendar iconfont_box"></label>
+            <span class="marginRL5">—</span>
+            <input type="text" id="effectMaxDate" name="effectMaxDate" class="common_input datepicker"  placeholder="" style="width: 110px">
+            <label for="effectMaxDate" class="glyphicon glyphicon-calendar iconfont_box"></label>
+            <span class="marginLR15"></span>
+            <input  id ="moreInputBtn" type="checkbox" v-model ="showMoreQuerySectionFlag"> 
+            <label for="moreInputBtn">更多条件</label>
+            <button type="button" id="s7QueryBtn" url="${pageContext.request.contextPath}/s7/s7Query.action"
+                 class="btn btn-sm btn-primary" v-on:click="queryS7">查询</button>
         </div>
         <!--query row1 end-->
 
@@ -90,16 +90,16 @@
             <!--query row2 start-->
             <div class="query_row">
                 <span class="query_title">服务等级&nbsp;|&nbsp;机型</span>
-                <input id ="a1" type="checkbox"><label for="a1">豪华头等舱</label>
-                <input id ="a2" type="checkbox"><label for="a2">头等舱</label>
-                <input  id ="a3" type="checkbox"><label for="a3"> 豪华商务舱</label>
-                <input  id ="a4" type="checkbox"> <label for="a4">商务舱</label>
-                <input  id ="a5" type="checkbox"> <label for="a5">豪华经济舱</label>
-                <input  id ="a6" type="checkbox"> <label for="a6">经济舱</label>
+                <input id ="cabinType04" value="R" name="name" type="checkbox"><label for="cabinType04">豪华头等舱</label>
+                <input id ="cabinType01" value="F" name="name" type="checkbox"><label for="cabinType01">头等舱</label>
+                <input  id ="cabinType05" value="J" name="name" type="checkbox"><label for="cabinType05"> 豪华商务舱</label>
+                <input  id ="cabinType02" value="C" name="name" type="checkbox"> <label for="cabinType02">商务舱</label>
+                <input  id ="cabinType06" value="P" name="name" type="checkbox"> <label for="cabinType06">豪华经济舱</label>
+                <input  id ="cabinType03" value="Y" name="name" type="checkbox"> <label for="cabinType03">经济舱</label>
                 <span class="marginR15"></span>
-
                 <label   class="marginR5">机型</label>
-                <select class="common_input">
+                <select id="s7_F_equipment" class="common_input" 
+                    	url="${pageContext.request.contextPath}/equipment/query.action" style="width: 150px">
                     <option selected>选择</option>
                     <option>747-B747-400CMB</option>
                     <option>73G-B737-700</option>
@@ -107,20 +107,20 @@
                     <option>340-A340-300</option>
                     <option>319-A319-111</option>
                 </select>
-
                 <label class="marginR5">优先级序号</label>
-                <input type="text" class="common_input"  style="width: 100px">
+                 <input type="text" id="sequenceNumber" name="sequenceNumber" 
+                    maxlength="7" class="common_input"  style="width: 100px">
             </div>
             <!--query row2 end-->
             <!--query row3 start-->
             <div class="query_row">
                 <span class="query_title">地理位置</span>
-                <label   class="marginR5">区域1</label>
-                <input type="text" class="common_input"  style="width: 100px">
+                <label class="marginR5">区域1</label>
+                <input type="text" id="geoSpecLoc1" name="geoSpecLoc1" mode="upper" maxlength="3"  class="common_input" style="width: 100px">
                 <label class="marginR5">区域2</label>
-                <input type="text" class="common_input"  style="width: 100px">
+                <input type="text" id="geoSpecLoc2" name="geoSpecLoc2" mode="upper" maxlength="3"  class="common_input" style="width: 100px">
                 <label class="marginR5">经过区域</label>
-                <input type="text" class="common_input"  style="width: 100px">
+                <input type="text" id="geoSpecLoc3" name="geoSpecLoc3" mode="upper" maxlength="3"  class="common_input" style="width: 100px">
             </div>
             <!--query row3 end-->
         </div>
