--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -77,7 +77,7 @@
                 <input  id ="moreInputBtn" type="checkbox" v-model ="showMoreQuerySectionFlag"> 
                 <label for="moreInputBtn">更多条件</label>
                 <button type="button" id="s7QueryBtn" url="${pageContext.request.contextPath}/s7/s7Query.action"
-                    class="btn btn-sm btn-primary" v-on:click="queryS7">查询</button>
+                    class="btn btn-sm btn-primary" v-on:click="handleClickQuery">查询</button>
             </span>
             
         </div>
